--- a/temperature/index.html
+++ b/temperature/index.html
@@ -9,9 +9,9 @@
       <div class="tt">
         <input type="number" class="time" placeholder="Temperature Ex: 0">
         <select class="select">
-          <option value="1">°F</option>
-          <option value="2">°C</option>
-          <option value="3">K</option>
+          <option value="1" class="opt">°F</option>
+          <option value="2" class="opt">°C</option>
+          <option value="3" class="opt">K</option>
         </select>
       </div>
       <div class="ii">
