--- a/quiz/score.html
+++ b/quiz/score.html
@@ -6,7 +6,7 @@
     <div class="oo">
       <div class="hed"><p>Score Card</p></div>
       <div class="score">
-        <p class="gg">Hoorah! 1 out of 10</p>
+        <p class="gg">Hoorah! <bold class="boo"></bold> out of 10</p>
       </div>
       <div class="mm">
         <div><p class="c">Correct : </p><p class="correct">5</p></div>
